test/langtools/tools/javac/valhalla/lworld-values/SneakThroSuperCallTest.out
SneakThroSuperCallTest.java:13:21: compiler.err.value.class.does.not.support: notify
1 error
